Implement object-based fetch negotiation rounds